[package]
name = "temperature-probe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.2.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
reqwest = { version = "0.11.17", features=["blocking", "json", "rustls-tls"] }
dotenv = "0.15"

